--- a/app/styles/_nav.scss
+++ b/app/styles/_nav.scss
@@ -17,7 +17,7 @@ $nav-font-family: ThaiSansNeueRegular;
     height: 100%;
     top: 0;
     left: 0;
-    z-index: 9999;
+    z-index: 9997;
     background: $section-nav-bg;
 //    @include box-shadow(0px 0px 5px #505050);
     @include box-shadow(1px 0px 5px rgba(0, 0, 0, 0.1));
